[tool.poetry]
name = "clangen-android"
version = "0.1.0"
description = "Porting ClanGen to Kivy for Android"
authors = ["Your Name <you@example.com>"]
keywords = ["warriorcats", "fanedit", "game", "kivy"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kivy = "^2.3.0"
docutils = ">=0.20,<0.21.2"
numpy = "^1.24"
ujson = "^5.7.0"
platformdirs = "^3.3.0"
pypresence = { version = "^4.2.1", optional = true }
pgpy = "^0.6.0"
requests = "^2.28.2"
strenum = "^0.4.10"
black = { version = "^23.0", python = ">=3.8," }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pylint = "^2.17.3"

[tool.poetry.group.build]
optional = true
[tool.poetry.group.build.dependencies]
pyinstaller = "^6.6.0"
pillow = "^9.5.0"
setuptools = "^67.7.2"
wheel = "^0.40.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.extras]
discord = ["pypresence"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
